--- a/WingMate_iOS/View Controllers/Login VC/LoginVC.xib
+++ b/WingMate_iOS/View Controllers/Login VC/LoginVC.xib
@@ -96,7 +96,7 @@
                                     <color key="textColor" name="Label Gray Text Color"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="6+ Characters" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xta-ED-oYj">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xta-ED-oYj">
                                     <rect key="frame" x="20" y="299" width="335" height="40"/>
                                     <color key="backgroundColor" name="Text Field Bg Color"/>
                                     <constraints>
