--- a/WingMate_iOS/View Controllers/Questionnaires/QuestionnairesVC.xib
+++ b/WingMate_iOS/View Controllers/Questionnaires/QuestionnairesVC.xib
@@ -15,12 +15,15 @@
                 <outlet property="buttonBack" destination="GMq-Ez-3qw" id="kSh-oj-ISV"/>
                 <outlet property="buttonContinue" destination="HGO-aE-5gx" id="88k-zE-YVk"/>
                 <outlet property="buttonSkip" destination="Mg5-0y-ZRZ" id="oAI-Q3-TWq"/>
+                <outlet property="constraintHeightSearchView" destination="X8z-dz-hcO" id="VhA-Ht-8qi"/>
+                <outlet property="constraintTopSearchView" destination="c4T-a5-Oon" id="jfc-cd-hRE"/>
                 <outlet property="imageViewHeart" destination="Nqs-zq-VGy" id="f3T-jp-5gY"/>
                 <outlet property="labelProgress" destination="0XP-xs-Wr8" id="l4a-yi-NT1"/>
                 <outlet property="labelQuestion" destination="F9R-db-1Ri" id="G7x-qg-qJ7"/>
                 <outlet property="labelSubHeading" destination="Hl4-63-ExC" id="QuD-kl-BGC"/>
                 <outlet property="progressView" destination="KEC-Zu-94C" id="MHF-kA-IqW"/>
                 <outlet property="tableViewOptions" destination="xq0-pP-sMs" id="TL1-rW-VCp"/>
+                <outlet property="textFieldSearch" destination="4uN-U2-ktf" id="jFL-YN-Ade"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -71,7 +74,7 @@
                     <rect key="frame" x="20" y="20" width="72" height="72"/>
                 </imageView>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="xq0-pP-sMs">
-                    <rect key="frame" x="20" y="179.33333333333334" width="374" height="438.66666666666663"/>
+                    <rect key="frame" x="20" y="251.33333333333334" width="374" height="366.66666666666663"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="wdL-ej-Sxs"/>
@@ -146,6 +149,48 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6e0-hV-u3L">
+                    <rect key="frame" x="20" y="179.33333333333334" width="374" height="40"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search" translatesAutoresizingMaskIntoConstraints="NO" id="yHe-gg-Hah">
+                            <rect key="frame" x="10" y="10" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="Jqk-ML-jhA"/>
+                                <constraint firstAttribute="height" constant="20" id="wUF-4K-7OX"/>
+                            </constraints>
+                        </imageView>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4uN-U2-ktf">
+                            <rect key="frame" x="40" y="0.0" width="334" height="40"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="o6i-AA-Vuw"/>
+                            </connections>
+                        </textField>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="yHe-gg-Hah" firstAttribute="centerY" secondItem="6e0-hV-u3L" secondAttribute="centerY" id="P7H-cd-Tb4"/>
+                        <constraint firstAttribute="bottom" secondItem="4uN-U2-ktf" secondAttribute="bottom" id="Thh-II-Tdh"/>
+                        <constraint firstAttribute="trailing" secondItem="4uN-U2-ktf" secondAttribute="trailing" id="W7J-Rx-Mgg"/>
+                        <constraint firstAttribute="height" constant="40" id="X8z-dz-hcO" userLabel="cstHeight"/>
+                        <constraint firstItem="yHe-gg-Hah" firstAttribute="leading" secondItem="6e0-hV-u3L" secondAttribute="leading" constant="10" id="aMK-Xe-8wE"/>
+                        <constraint firstItem="4uN-U2-ktf" firstAttribute="leading" secondItem="yHe-gg-Hah" secondAttribute="trailing" constant="10" id="cjz-Iw-9cj"/>
+                        <constraint firstItem="4uN-U2-ktf" firstAttribute="top" secondItem="6e0-hV-u3L" secondAttribute="top" id="i1o-I0-H3J"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="4"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="1"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                            <color key="value" name="TextFieldBgColor"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -153,15 +198,16 @@
                 <constraint firstItem="GMq-Ez-3qw" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.6" id="0Px-zw-gl6"/>
                 <constraint firstAttribute="trailing" secondItem="F9R-db-1Ri" secondAttribute="trailing" constant="20" id="9H1-ka-ap5"/>
                 <constraint firstItem="Nqs-zq-VGy" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="20" id="AVj-oX-Stw"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="6e0-hV-u3L" secondAttribute="trailing" constant="20" id="CUy-D4-MQU"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="xq0-pP-sMs" secondAttribute="trailing" constant="20" id="Cbk-nl-xVM"/>
                 <constraint firstItem="F9R-db-1Ri" firstAttribute="top" secondItem="Nqs-zq-VGy" secondAttribute="bottom" constant="20" id="EgK-Ah-rlz"/>
                 <constraint firstItem="Mg5-0y-ZRZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="IcS-Yu-PTJ"/>
                 <constraint firstItem="F9R-db-1Ri" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="NWi-0h-4Ym"/>
-                <constraint firstItem="xq0-pP-sMs" firstAttribute="top" secondItem="Hl4-63-ExC" secondAttribute="bottom" constant="32" id="RNi-zD-TYr"/>
                 <constraint firstItem="GMq-Ez-3qw" firstAttribute="height" secondItem="HGO-aE-5gx" secondAttribute="height" id="Rs7-9S-t1z"/>
                 <constraint firstItem="xq0-pP-sMs" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="XL2-ao-ysP"/>
                 <constraint firstItem="GMq-Ez-3qw" firstAttribute="top" secondItem="HGO-aE-5gx" secondAttribute="bottom" constant="2" id="XSS-ye-ain"/>
                 <constraint firstItem="GMq-Ez-3qw" firstAttribute="width" secondItem="HGO-aE-5gx" secondAttribute="width" id="Y4O-Xd-PaN"/>
+                <constraint firstItem="6e0-hV-u3L" firstAttribute="top" secondItem="Hl4-63-ExC" secondAttribute="bottom" constant="32" id="c4T-a5-Oon" userLabel="cstTop"/>
                 <constraint firstItem="KEC-Zu-94C" firstAttribute="centerY" secondItem="Nqs-zq-VGy" secondAttribute="centerY" id="cWt-xS-Yu1"/>
                 <constraint firstItem="Hl4-63-ExC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="cip-ON-JaP"/>
                 <constraint firstItem="HGO-aE-5gx" firstAttribute="top" secondItem="xq0-pP-sMs" secondAttribute="bottom" constant="8" id="dpY-QO-tw3"/>
@@ -172,7 +218,9 @@
                 <constraint firstItem="Mg5-0y-ZRZ" firstAttribute="centerY" secondItem="Nqs-zq-VGy" secondAttribute="centerY" id="qAG-3f-mAd"/>
                 <constraint firstItem="GMq-Ez-3qw" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="qLF-qB-60g"/>
                 <constraint firstItem="HGO-aE-5gx" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="rff-wp-DlU"/>
+                <constraint firstItem="6e0-hV-u3L" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="rjR-dq-DPD"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="KEC-Zu-94C" secondAttribute="trailing" constant="20" id="sm9-89-SEI"/>
+                <constraint firstItem="xq0-pP-sMs" firstAttribute="top" secondItem="6e0-hV-u3L" secondAttribute="bottom" constant="32" id="svi-Iz-B2C"/>
             </constraints>
             <point key="canvasLocation" x="-97.101449275362327" y="73.369565217391312"/>
         </view>
@@ -180,6 +228,7 @@
     <resources>
         <image name="backbutton" width="47.333332061767578" height="24"/>
         <image name="login-heart" width="72" height="72"/>
+        <image name="search" width="43" height="42"/>
         <namedColor name="Label Gray Text Color">
             <color red="0.56499999761581421" green="0.56499999761581421" blue="0.56499999761581421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -191,6 +240,9 @@
         </namedColor>
         <namedColor name="RedThemeColor">
             <color red="0.96100002527236938" green="0.35699999332427979" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TextFieldBgColor">
+            <color red="0.96100002527236938" green="0.96100002527236938" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="VCBackgroundColor">
             <color red="0.89800000190734863" green="0.89800000190734863" blue="0.89800000190734863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
