--- a/WingMate_iOS/View Controllers/Upload Photo Video/Cells/Upload Photo Video Collection View Cell/UploadPhotoVideoCollectionViewCell.xib
+++ b/WingMate_iOS/View Controllers/Upload Photo Video/Cells/Upload Photo Video Collection View Cell/UploadPhotoVideoCollectionViewCell.xib
@@ -33,8 +33,8 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jUI-qe-dZt">
-                        <rect key="frame" x="21.5" y="30" width="100" height="66"/>
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jUI-qe-dZt">
+                        <rect key="frame" x="21.5" y="14" width="100" height="66"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4wT-WJ-zQ6">
                                 <rect key="frame" x="15" y="40" width="70" height="26"/>
