--- a/WingMate_iOS/View Controllers/Option Selection/OptionSelectionVC.xib
+++ b/WingMate_iOS/View Controllers/Option Selection/OptionSelectionVC.xib
@@ -10,8 +10,16 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="EditProfileSelectionVC" customModule="WingMate_iOS" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OptionSelectionVC" customModule="WingMate_iOS" customModuleProvider="target">
             <connections>
+                <outlet property="buttonBack" destination="Sgo-2W-HqM" id="ejb-Ab-n6p"/>
+                <outlet property="buttonContinue" destination="ja1-Ng-e7S" id="KS1-kI-hUS"/>
+                <outlet property="constraintHeightSearchView" destination="MCs-Uf-9IE" id="9pa-s6-DDP"/>
+                <outlet property="constraintTopSearchView" destination="q1q-0H-5AI" id="HCg-d5-ViW"/>
+                <outlet property="labelQuestion" destination="Lnx-Uk-wJv" id="DhM-Pg-cH4"/>
+                <outlet property="labelSubHeading" destination="IFh-zA-Ru5" id="sho-rQ-Tji"/>
+                <outlet property="tableViewOptions" destination="HTE-rM-x9b" id="wY4-jG-k6N"/>
+                <outlet property="textFieldSearch" destination="eIJ-lf-cX4" id="C2r-vr-Tqx"/>
                 <outlet property="view" destination="JwK-Gw-MSD" id="L0Q-CE-XV2"/>
             </connections>
         </placeholder>
@@ -23,23 +31,23 @@
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select one of the below options." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFh-zA-Ru5">
                     <rect key="frame" x="20" y="132" width="202" height="16.666666666666657"/>
                     <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="14"/>
-                    <color key="textColor" name="Label Gray Text Color"/>
+                    <color key="textColor" name="LabelGrayTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnx-Uk-wJv">
                     <rect key="frame" x="20" y="112" width="374" height="0.0"/>
                     <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="30"/>
-                    <color key="textColor" name="Purple Theme Color"/>
+                    <color key="textColor" name="PurpleThemeColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ja1-Ng-e7S">
                     <rect key="frame" x="82.666666666666671" y="626" width="248.66666666666663" height="50"/>
-                    <color key="backgroundColor" name="Purple Theme Color"/>
+                    <color key="backgroundColor" name="PurpleThemeColor"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="ak7-5X-fdw"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
-                    <state key="normal" title="Save &amp; Continue">
+                    <state key="normal" title="Save">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </state>
                     <userDefinedRuntimeAttributes>
@@ -47,10 +55,16 @@
                             <real key="value" value="8"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="saveButtonPressed:" destination="-1" eventType="touchUpInside" id="irr-QW-I51"/>
+                    </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sgo-2W-HqM">
                     <rect key="frame" x="82.666666666666671" y="678" width="248.66666666666663" height="50"/>
                     <state key="normal" image="backbutton"/>
+                    <connections>
+                        <action selector="backButtonPressed:" destination="-1" eventType="touchUpInside" id="MZa-UX-rPx"/>
+                    </connections>
                 </button>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login-heart" translatesAutoresizingMaskIntoConstraints="NO" id="4Pp-5q-EtD">
                     <rect key="frame" x="20" y="20" width="72" height="72"/>
@@ -58,6 +72,10 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="1" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="HTE-rM-x9b">
                     <rect key="frame" x="20" y="228.66666666666666" width="374" height="389.33333333333337"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="uRC-Jr-6rF"/>
+                        <outlet property="delegate" destination="-1" id="CHN-3m-u3b"/>
+                    </connections>
                 </tableView>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0CG-Zy-UGB">
                     <rect key="frame" x="20" y="168.66666666666666" width="374" height="40"/>
@@ -130,11 +148,11 @@
         <image name="backbutton" width="47.333332061767578" height="24"/>
         <image name="login-heart" width="72" height="72"/>
         <image name="search" width="43" height="42"/>
-        <namedColor name="Label Gray Text Color">
-            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="LabelGrayTextColor">
+            <color red="0.56499999761581421" green="0.56499999761581421" blue="0.56499999761581421" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="Purple Theme Color">
-            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="PurpleThemeColor">
+            <color red="0.28999999165534973" green="0.23899999260902405" blue="0.37599998712539673" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="TextFieldBgColor">
             <color red="0.96100002527236938" green="0.96100002527236938" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
