--- a/WingMate_iOS/View Controllers/Profile/ProfileVC.xib
+++ b/WingMate_iOS/View Controllers/Profile/ProfileVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -60,18 +60,24 @@
                             <rect key="frame" x="0.0" y="0.0" width="398" height="294.33333333333331"/>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ezk-oD-JlH">
-                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                            <rect key="frame" x="8" y="8" width="50" height="50"/>
+                            <color key="backgroundColor" name="TextFieldBgColor"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="vM1-07-Qix"/>
                                 <constraint firstAttribute="width" constant="50" id="zhC-vA-dL4"/>
                             </constraints>
                             <state key="normal" image="profile_back"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="25"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="backButtonPressed:" destination="-1" eventType="touchUpInside" id="KLV-fP-WYW"/>
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MbU-sp-hZV">
-                            <rect key="frame" x="330" y="68" width="60" height="60"/>
+                            <rect key="frame" x="330" y="76" width="60" height="60"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="Sja-VW-M40"/>
                                 <constraint firstAttribute="height" constant="60" id="sDT-RG-2rM"/>
@@ -83,7 +89,7 @@
                             </userDefinedRuntimeAttributes>
                         </imageView>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RNx-oo-Yj9">
-                            <rect key="frame" x="330" y="136" width="60" height="60"/>
+                            <rect key="frame" x="330" y="144" width="60" height="60"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="60" id="OWC-cQ-M9F"/>
                                 <constraint firstAttribute="height" constant="60" id="fpY-ow-VW0"/>
@@ -211,7 +217,7 @@
                                     </connections>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="6AM-MG-cR5" firstAttribute="leading" secondItem="huN-2t-KJZ" secondAttribute="leading" id="0C6-4P-fTn"/>
                                 <constraint firstAttribute="width" constant="60" id="4B9-vq-jPD"/>
@@ -232,14 +238,14 @@
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="QtB-tJ-Raz" secondAttribute="trailing" id="1Jh-W1-eRl"/>
                         <constraint firstItem="huN-2t-KJZ" firstAttribute="top" secondItem="7xl-gR-i2Q" secondAttribute="top" constant="8" id="1RF-jt-kd2"/>
-                        <constraint firstItem="Ezk-oD-JlH" firstAttribute="top" secondItem="7xl-gR-i2Q" secondAttribute="top" id="3pi-kS-Cbf"/>
+                        <constraint firstItem="Ezk-oD-JlH" firstAttribute="top" secondItem="7xl-gR-i2Q" secondAttribute="top" constant="8" id="3pi-kS-Cbf"/>
                         <constraint firstAttribute="bottom" secondItem="anI-fN-q5e" secondAttribute="bottom" id="48V-PS-P6m"/>
-                        <constraint firstItem="Ezk-oD-JlH" firstAttribute="leading" secondItem="7xl-gR-i2Q" secondAttribute="leading" id="C5V-hU-CAL"/>
+                        <constraint firstItem="Ezk-oD-JlH" firstAttribute="leading" secondItem="7xl-gR-i2Q" secondAttribute="leading" constant="8" id="C5V-hU-CAL"/>
                         <constraint firstItem="RNx-oo-Yj9" firstAttribute="top" secondItem="MbU-sp-hZV" secondAttribute="bottom" constant="8" id="Jgg-Lq-6n4"/>
                         <constraint firstItem="QtB-tJ-Raz" firstAttribute="leading" secondItem="7xl-gR-i2Q" secondAttribute="leading" id="K6X-3l-uEq"/>
                         <constraint firstAttribute="trailing" secondItem="RNx-oo-Yj9" secondAttribute="trailing" constant="8" id="RNo-W9-NcQ"/>
                         <constraint firstAttribute="trailing" secondItem="MbU-sp-hZV" secondAttribute="trailing" constant="8" id="XY2-Ei-0YQ"/>
-                        <constraint firstItem="MbU-sp-hZV" firstAttribute="top" secondItem="huN-2t-KJZ" secondAttribute="bottom" id="XdK-Xf-XdZ" userLabel="top"/>
+                        <constraint firstItem="MbU-sp-hZV" firstAttribute="top" secondItem="huN-2t-KJZ" secondAttribute="bottom" constant="8" id="XdK-Xf-XdZ" userLabel="top"/>
                         <constraint firstItem="anI-fN-q5e" firstAttribute="leading" secondItem="7xl-gR-i2Q" secondAttribute="leading" id="Xin-Rr-Y3z"/>
                         <constraint firstItem="QtB-tJ-Raz" firstAttribute="top" secondItem="7xl-gR-i2Q" secondAttribute="top" id="dx8-I9-DFI"/>
                         <constraint firstAttribute="bottom" secondItem="QtB-tJ-Raz" secondAttribute="bottom" id="fxH-2c-6ts"/>
@@ -328,7 +334,7 @@
                         <constraint firstAttribute="height" constant="40" id="ERo-Lo-b2c"/>
                     </constraints>
                 </stackView>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="532-wN-lBh">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="532-wN-lBh">
                     <rect key="frame" x="8" y="318.33333333333326" width="398" height="273.66666666666674"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DFo-Rj-1OY">
@@ -418,6 +424,9 @@
         </namedColor>
         <namedColor name="RedThemeColor">
             <color red="0.96100002527236938" green="0.35699999332427979" blue="0.33300000429153442" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="TextFieldBgColor">
+            <color red="0.96100002527236938" green="0.96100002527236938" blue="0.9570000171661377" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
